--- a/index.html
+++ b/index.html
@@ -6,13 +6,20 @@
 	</head>
 	<body>
 		<div class="navbar">
-			<a class="navbar-title" href="index.html">moderatelyfunctional</a>
+			<a class="navbar-title" href="/">moderatelyfunctional</a>
 			<div class="navbar-options">
-				<a class="navbar-option active" href="whoami.html">thoughts</a>
+				<a class="navbar-option active" href="/">thoughts</a>
 				<br>
-				<a class="navbar-option" href="whoami.html">projects</a>
+				<a class="navbar-option" href="projects">projects</a>
 				<br>
-				<a class="navbar-option" href="whoami.html">whoami</a>
+				<a class="navbar-option" href="whoami">whoami</a>
+			</div>
+		</div>
+		<div class="thoughts">
+			<div class="thought">
+				<div class="thought-title">Empathy</div>
+				<div class="thought-pub-date">9-7-2020</div>
+				<div class="thought-description">Here is my secret. It is very simple: It is only with the heart that one can see rightly; what is essential is invisible to the eye.</div>
 			</div>
 		</div>
 	</body>
