--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 			</div>
 		</div>
 		<div class="thoughts">
-			<div class="thought">
+			<a class="thought" href="posts/empathy">
 				<div class="thought-title">Empathy</div>
 				<div class="thought-pub-date">9-7-2020</div>
-				<div class="thought-description">Here is my secret. It is very simple: It is only with the heart that one can see rightly; what is essential is invisible to the eye.</div>
-			</div>
+				<div class="thought-description">Here is my secret. It is very simple: It is only with the heart that one can see rightly; what is essential is invisible to the eye. - The Fox from <i>The Little Prince</i></div>
+			</a>
 		</div>
 	</body>
 </html>
