--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<a class="thought" href="posts/empathy">
 				<div class="thought-title">Empathy</div>
 				<div class="thought-pub-date">9-7-2020</div>
-				<div class="thought-description">Here is my secret. It is very simple: It is only with the heart that one can see rightly; what is essential is invisible to the eye. - The Fox from <i>The Little Prince</i></div>
+				<div class="thought-description">Our lives are not our own. From womb to tomb, we are bound to others, past and present. And by each crime and every kindness, we birth our future - <i>Somni 451 from Cloud Atlas</i></div>
 			</a>
 		</div>
 	</body>
